--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "next-thunder-talk",
+  "name": "dons-bikes-blog",
   "version": "1.0.0",
-  "description": "Next.js Demo for Thunder Talk",
+  "description": "Blog about Don's Bikes or Bike Rides/Journeys",
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
